Dialog: wrap the dialog in a root container to prevent React errors

--- a/components/Dialog.scss
+++ b/components/Dialog.scss
@@ -1,8 +1,4 @@
-html {
-    height: 100%;
-    width: 100%;
-}
-body {
+html, body, #main-container {
     height: 100%;
     width: 100%;
 }
